css: fix computer diagram margin that blocks down arrow (#3225)
Problem: Down arrow key of the vertical scroll bar in the VM deployment wizard does not work.
Root Cause: The computer diagram on the right side in the VM deployment wizard spills its margin on the left causing the arrow key to be blocked.
Solution: Fix the background-position to get the correct position than margin-left for the zone-panel. With the fix, the left size arrow keys and vertical scrollbars are no longer under the diagram image and press-able now.

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -6878,10 +6878,9 @@ label.error {
 .multi-wizard.instance-wizard .diagram .part.zone-plane {
   width: 354px;
   height: 117px;
-  background-position: 0px -55px;
+  background-position: -38px -55px;
   /*+placement:displace -38px 259px;*/
   position: absolute;
-  margin-left: -38px;
   margin-top: 259px;
 }
 
